[gd_scene load_steps=10 format=3 uid="uid://41v4y5kymvos"]

[ext_resource type="Script" path="res://main.gd" id="1_2f5qq"]
[ext_resource type="PackedScene" uid="uid://0ix5ud2t3cgg" path="res://mob.tscn" id="2_3yx56"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="2_miy5l"]
[ext_resource type="PackedScene" uid="uid://c4hh2uoyxy6w0" path="res://player.tscn" id="3_ww3b7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t7sm3"]
size = Vector3(100, 2, 100)

[sub_resource type="BoxMesh" id="BoxMesh_cbqoa"]
size = Vector3(100, 2, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_33wyd"]
albedo_color = Color(1, 0.0784314, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_d464a"]
material = SubResource("StandardMaterial3D_33wyd")

[sub_resource type="Curve3D" id="Curve3D_14d2u"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -23.9248, 0, 24.2675, 0, 0, 0, 0, 0, 0, -23.9905, 0, -23.6437, 0, 0, 0, 0, 0, 0, 23.8551, 0, -24.0375, 0, 0, 0, 0, 0, 0, 23.8551, 0, 24.005, 0, 0, 0, 0, 0, 0, -23.9248, 0, 24.2675),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_2f5qq")
mob_scene = ExtResource("2_3yx56")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4

[node name="CollisionShape" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_t7sm3")

[node name="MeshInstance" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.270691, -0.222473, -0.00939941)
mesh = SubResource("BoxMesh_cbqoa")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, -6.96246e-16, 3.03988e-17, 3.03988e-17, 0.0871558, 0.996195, -6.96246e-16, -0.996195, 0.0871558, 0, 0, -6)

[node name="Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, -5.28801e-22, -1.10996e-22, 5.28177e-22, 1, -3.2619e-08, 1.13073e-22, 1.94217e-08, 1, 2.07568e-12, -7.12928, 27.6543)

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.73495, -0.339061, -0.58727, 0.678121, 0.367475, 0.636485, -1.23481e-08, -0.866025, 0.5, 0.192387, 18, 22)
light_energy = 2.0
shadow_enabled = true

[node name="Cylinders" type="Node3D" parent="."]

[node name="TopLeft" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, -24)
mesh = SubResource("CylinderMesh_d464a")

[node name="BottomLeft" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 24)
mesh = SubResource("CylinderMesh_d464a")

[node name="TopRight" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -24)
mesh = SubResource("CylinderMesh_d464a")

[node name="BottomRight" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 24)
mesh = SubResource("CylinderMesh_d464a")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 30.0
offset_right = 114.0
offset_bottom = 116.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Score: 0"
script = ExtResource("2_miy5l")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -13.0
offset_right = 77.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Press Enter to retry"

[node name="Player" parent="." instance=ExtResource("3_ww3b7")]

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_14d2u")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-0.999998, 0, -0.00136986, 0, 1, 0, 0.00136986, 0, -0.999998, -23.9248, 0, 24.2675)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
